<resources>
    <string name="app_name">HiOwlTest</string>
    <string name="start_stop">Start</string>
    <string name="hiOwls">hiOwls</string>
    <string name="facial_recognition">Facial Recognition</string>
    <string name="main_menu2">Main Menu</string>
    <string name="scanner">Pick New Face</string>
    <string name="pick_image">Pick Face</string>
    <string name="match">Match: </string>
    <string name="todo">TODO</string>
    <string name="more_info_on_match">More Info On Match</string>
    <string name="main_menu">Main Menu</string>

</resources>
