<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e8e8"
    android:orientation="vertical" >

    <Button
        android:id="@+id/pick_image_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/pick_image" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image_view"
        android:text="@string/match"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/more_info_on_match" />

    <Button
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pick_image_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pick_image_button"
        android:layout_marginEnd="-18dp"
        android:layout_marginRight="-18dp"
        android:text="@string/main_menu2" />

    <ImageButton
        android:id="@+id/notiButton"
        android:layout_width="141dp"
        android:layout_height="154dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/sample" />

</RelativeLayout>